fix(Log Query): Habilitado o log das queries executados pelo typeorm
