# src/API/Config.Routes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express';
-import { rotasCarga } from './Routes/Carga.Routes.Disabled';
+import { rotasCarga } from './Routes/Carga.Routes';
 import { rotaSwagger } from './Routes/Swagger';
 import { rotasJMeter } from './Routes/JMeter.Routes';
 
 const rotas = Router();
 
-//rotas.use('/', rotasCarga);
+rotas.use('/', rotasCarga);
 rotas.use('/', rotasJMeter);
 rotas.use('/', rotaSwagger);
 
